k8s/remote/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tic-tac-arena
  namespace: tic-tac-arena
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tic-tac-arena.dmytrenko.dev
      secretName: tic-tac-arena-tls
  rules:
    - host: tic-tac-arena.dmytrenko.dev
      http:
        paths:
          - path: /health
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - path: /ready
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tic-tac-arena-api
  namespace: tic-tac-arena
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tic-tac-arena.dmytrenko.dev
      secretName: tic-tac-arena-tls
  rules:
    - host: tic-tac-arena.dmytrenko.dev
      http:
        paths:
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 3000
